[build-system]
# hatchling < 1.17.1 won't work with editable installs and user defined pth files
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[project]
name = "sourceprotected"
description = "Encrypt Python source files and decrypt them on the fly during runtime"
authors = [
    {name = "Viicos", email = "65306057+Viicos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
dependencies = [
    "cryptography>=35.0.0"
]
dynamic = ["version"]

[project.scripts]
sourceprotected = "sourceprotected.cli:cli"


[tool.hatch.version]
path = "src/sourceprotected/__init__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/sourceprotected.pth" = "register_sourceprotected.pth"

[tool.black]
line-length = 90

[tool.ruff]
select = [
    "E",  # pycodestyle (E)
    "W",  # pycodestyle (W)
    "F",  # Pyflakes
    "UP", # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
line-length = 90
src = ["src"]
ignore = ["PLR0912"]

[tool.ruff.isort]
known-first-party = ["sourceprotected"]
